--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,5 +11,57 @@
 
     <artifactId>client</artifactId>
 
+    <name>TSChat android</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>android</groupId>
+            <artifactId>android</artifactId>
+            <version>4.0.3_r3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.acra</groupId>
+            <artifactId>acra</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                <artifactId>android-maven-plugin</artifactId>
+                <version>3.8.2</version>
+                <configuration>
+                    <sdk>
+                        <path>${env.ANDROID_HOME}</path>
+                        <platform>15</platform>
+                    </sdk>
+                    <!--androidManifestFile>${project.build.directory}/filtered-manifest/AndroidManifest.xml</androidManifestFile-->
+                </configuration>
+                <extensions>true</extensions>
+                <!--executions>
+                    <execution>
+                        <phase>initialize</phase>
+                    </execution>
+                </executions-->
+            </plugin>
+        </plugins>
+    </build>
 </project>
