--- a/client/project.properties
+++ b/client/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-15
-android.library.reference.1=gen-external-apklibs/com.google.android.gms_google-play-services_16.0.0
+target=Google Inc.:Google APIs:19
+
