--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,7 @@
         <module>frontend</module>
         <module>chatserver</module>
         <module>loginserver</module>
+        <module>userserver</module>
     </modules>
 
     <dependencies>
