android: custom class search, removed reflections, now chat working

--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ChatActivity"/>
+        <service android:name=".service.ChatService"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
