--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".activity.ChatActivity"/>
         <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.RegActivity"/>
         <service android:name=".service.ChatService"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
