--- a/client/pom.xml
+++ b/client/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>acra</artifactId>
             <version>4.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>support-v4</artifactId>
+            <version>r7</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src</sourceDirectory>
