--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>annotation-detector</artifactId>
             <version>3.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.30</version>
+        </dependency>
     </dependencies>
 
     <build>
