--- a/client/pom.xml
+++ b/client/pom.xml
@@ -64,10 +64,10 @@
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>3.8.2</version>
+                <version>4.0.0-rc.2</version>
                 <configuration>
                     <sdk>
-                        <path>${env.ANDROID_HOME}</path>
+                        <path>/opt/android-sdk</path>
                         <platform>20</platform>
                     </sdk>
                     <!--androidManifestFile>${project.build.directory}/filtered-manifest/AndroidManifest.xml</androidManifestFile-->
